Fix horizontal scrolling issue

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ a {
 }
 
 .header .top-section .search-bar input {
-    width: 835px;
+    width: 800px;
     background-color: rgb(233, 233, 233);
     border: none;
     font-size: 1.5rem;
